--- a/posts/reducing-friction.mdx
+++ b/posts/reducing-friction.mdx
@@ -1,4 +1,8 @@
-# Reducing Friction: (Mostly) Good
+---
+title: Reducing Friction: (Mostly) Good
+description: "Reducing friction helps us a lot, but also generates perverse incentives"
+date: Aug 17 2024
+---
 
 We all love to imagine how the developer experience would be improved by reducing friction. We'd be able to get what we wanted done faster, cheaper and better, right? But as with anything else good, perhaps we should also look at some examples of situations where reducing friction has some negative side effects.
 
