--- a/posts/reducing-friction.mdx
+++ b/posts/reducing-friction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Reducing Friction: (Mostly) Good
+title: "Reducing Friction: (Mostly) Good"
 description: "Reducing friction helps us a lot, but also generates perverse incentives"
 date: Aug 17 2024
 ---
