--- a/posts/reducing-friction.mdx
+++ b/posts/reducing-friction.mdx
@@ -8,9 +8,9 @@ We all love to imagine how the developer experience would be improved by reducin
 
 My own personal favourite: table tests. They make it much easier to write lots of tests to cover every edge case within your code, right? Sure, they do... in theory. But the ease of adding new table tests also provide some perverse incentives.
 
-Suddenly it feels quicker to add three table tests than one non-table test; so when a workflow you need to test isn't supported by the table tests you may be tempted to use the existing table tests (it's quicker, and it works almost as well... right?).
+Suddenly it feels quicker to add three table tests than one non-table test; so when a workflow you need to test isn't supported by the table tests you may be tempted to use the existing table tests to hack together a sort of solution (it's quicker, and it works almost as well... and I'm not falling into the sunk cost fallacy here, right? Right?).
 
 Another one, which I've seen several times in production, is that table tests make it much easier to add new tests of nebulous value whose primary effect on your project is to very slightly increase the time it takes to run the test suite.
-It makes one feel good, because it's another test validating that the software works as expected, but is it really adding any value? Do you actually know why it's there, or did you just add it because it was easy to do quickly while you were already there?
+These new tests make one feel good, because more validation that the software works as expected, but are these new tests really adding any value? Do you actually know why they're there, or did you just add them because it was easy to do quickly while you were already there?
 
 This doesn't make table tests bad (I certainly use them often), but be aware of the perverse incentives they apply to you and your team, and to their interactions with how you think.
