--- a/posts/reducing-friction.mdx
+++ b/posts/reducing-friction.mdx
@@ -11,17 +11,17 @@ My personal favourite example of reducing friction generating perverse incentive
 We've all seen this type of test: instead of writing out the code for each test, we write a generic test function and send a series of values from an array or iterable object to it.
 
 ```
-test('test validation', () => {
+test('midi.isMidiPitch()', () => {
     const table: [ string, number, boolean ][] = [
         [ 'negative numbers should fail', -1, false ],
         [ 'positive numbers should succeed', 1, true ],
-        [ 'zero should fail', 0, false ],
-        [ 'non-integers should fail', 0.5, true ],
-        [ 'maximum value should succeed', 127, true ],
-        [ 'too high value should fail, 128, false ],
+        [ 'non-integers should fail', 0.5, false ],
+        [ '127 should succeed', 127, true ],
+        [ '128 should fail', 128, false ],
+        [ '0 should succeed', 0, true ],
     ];
 
-    test.each(table)(_, num, ret) => expect(module.isMidiPitch(num)).toBe(ret);
+    test.each(table)((_, num, ret) => expect(midi.isMidiPitch(num)).toBe(ret));
 });
 ```
 
@@ -30,11 +30,27 @@ Well, yes, they do... but the goal should be minimizing important cases not cove
 
 A common case, and one I've seen many times in production: the code under test suddenly becomes more complex because of new requirements, but because it feels quicker to add three table tests than one non-table test, when a workflow you need to test isn't fully supported by the table tests you may be tempted to use the existing table tests to hack together a sort of solution (it's quicker, and it works almost as well... and I'm not falling into the sunk cost fallacy here, right? Right?).
 
+Mitigations include: thorough code review.
+
 Another case, which I've also seen many times in my own code: table tests make it much easier to add new tests of nebulous value whose primary effect on your project is to slightly increase the time it takes to run the test suite.
-These new tests make one feel good, because the feel like further validation that the software works as expected, but how do we know these new tests really adding any value?
-More specifically, do we actually know _why_ they're there, or did we just add them because it was easy to do quickly while already working on this part of the code?
+These new tests make one feel good, because they feel like further validation that the software works as expected, but how do we know if they are adding any value?
+And do we actually know _why_ they're there, or did we just add them because it was easy to do quickly while already working on this part of the code?
 
-(Tip: writing a brief message associated with each test in a table, explaining not _what_ is being tested but _why_ it is being tested, can help you understand whether the test should be there at all.
-(It also will make it easier for a new team member to understand what the code under test is doing, and why we're testing it as we do.)
+Mitigations include: writing a brief message associated with each test in a table, explaining not _what_ is being tested but _why_ it is being tested, can help you understand whether the test should be there at all.
+(These messages will also make it easier for a new team member to understand what the code under test is doing, and why we're testing it as we do.)
 
-Obviously, these perverse incentives don't make table tests&mdash;and other timesaving devices&mdash;bad (I certainly use table tests often), but be aware of the perverse incentives they apply to you and your team, and to their interactions with how you think.
+```
+test('midi.isMidiPitch()', () => {
+    const table: [ string, number, boolean ][] = [
+        [ 'MIDI pitches must be integers', 0.5, false ],
+        [ 'MIDI pitches may not be negative', -1, false ],
+        [ 'Allow minimum MIDI pitch of 0', 0, true ],
+        [ 'Allow maximum MIDI pitch of 127', 127, true ],
+        [ 'MIDI pitches may not exceed the maximum', 128, false ],
+    ];
+
+    test.each(table)((_, num, ret) => expect(midi.isMidiPitch(num)).toBe(ret));
+});
+```
+
+Obviously, perverse incentives don't make table tests&mdash;and other timesaving devices&mdash;bad (I certainly use table tests often), but be aware of these incentives, and their interactions with how you and your team think, and consider some simple mitigations for them.
